charon/tests/ui/unsupported/issue-167-self-constructors.out
error: assertion failure: "user_annotation.is_none()"
  --> tests/ui/unsupported/issue-167-self-constructors.rs:19:9
   |
19 |         Self { r }
   |         ^^^^^^^^^^

error: aborting due to previous error

[ ERROR charon_driver:212] The extraction encountered 1 errors
